force-app/main/default/staticresources/trailheadUserMetadata/objects/Trailhead_User__c.object
<CustomObject>
    <fields>
        <fullName>Avatar__c</fullName>
        <label>Avatar</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_URL__c</fullName>
        <label>Profile URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Profile_Visibility__c</fullName>
        <label>Profile Visibility</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trailhead_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Trailhead User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trailhead User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailhead Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>